[tool.poetry]
name = "project2"
version = "0.1.0"
description = ""
authors = ["Nikita Savin <klaster26@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.3"
flask-wtf = "^1.2.1"
wtforms = "^3.1.2"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
isort = "^5.13.2"
black = "^24.4.2"
requests = "^2.31.0"
gunicorn = "^22.0.0"

[tool.black]
line-length = 79

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
